--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.gitignore.io/api/angular,webstorm
-# Edit at https://www.gitignore.io/?templates=angular,webstorm
+# Created by https://www.gitignore.io/api/sass,angular,webstorm
+# Edit at https://www.gitignore.io/?templates=sass,angular,webstorm
 
 ### Angular ###
 ## Angular ##
@@ -32,6 +32,11 @@ e2e/*.map
 
 #System Files
 .DS_Store/
+
+### Sass ###
+*.css.map
+*.sass.map
+*.scss.map
 
 ### WebStorm ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
@@ -121,4 +126,4 @@ fabric.properties
 .idea/**/markdown-navigator.xml
 .idea/**/markdown-navigator/
 
-# End of https://www.gitignore.io/api/angular,webstorm
+# End of https://www.gitignore.io/api/sass,angular,webstorm
