--- a/wishlist/package.json
+++ b/wishlist/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@ngrx/store": "^8.5.0",
     "@ngrx/store-devtools": "^8.5.0",
     "ngrx-store-localstorage": "^8.0.0",
